dropdown now using onselect and name added

--- a/scss/elements.scss
+++ b/scss/elements.scss
@@ -147,8 +147,9 @@ div.feedback{
         @import 'maps';
         @import 'pagination';
         @import 'pathway';
-        @import 'submissions';
+        @import 'slider';
         @import 'spinner';
+        @import 'submissions';
         @import 'warning';
         @import 'wordcloud';
     }
