--- a/scss/main-edx.scss
+++ b/scss/main-edx.scss
@@ -53,6 +53,7 @@
         @import 'course-structure';  
         @import 'flow-diagram';
         @import 'image-swap';
-        @import 'tickbox';  
+        @import 'tickbox'; 
+        @import 'loader';  
     }
 }
