added value to slider

--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -27,6 +27,11 @@
             width: 30px;
             height: 30px;
             line-height: 30px;
+
+            .handler{
+                color: #fff;
+                text-align: center;
+            }
      }
 
     
