form does same on submit and on load if answered

--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -30,6 +30,7 @@
 
             .handler{
                 color: #fff;
+                line-height: 28px;
                 text-align: center;
             }
      }
