--- a/scss/main-edx.scss
+++ b/scss/main-edx.scss
@@ -64,6 +64,7 @@
         @import 'variables';
         @import 'general';
         @import 'cta';
+        @import 'tabs'; 
         @import 'titles'; 
         @import 'elements';  
         @import 'course-structure';  
