--- a/scss/elements.scss
+++ b/scss/elements.scss
@@ -542,3 +542,12 @@ section.feedback, .poll-feedback{
        
     }
 }
+
+.prefix{
+    float: left;
+    padding-right: 5px;
+}
+
+.xmodule_display.xmodule_CapaModule div.problem div div.equation{
+    margin-top: 10px;
+}
