--- a/scss/partials/_content.scss
+++ b/scss/partials/_content.scss
@@ -4,7 +4,7 @@ html, body{
 
 main{
     padding: 20px;
-    margin: 80px auto 0;
+    margin: 10px auto;
 }
 
 #shopping-list{
@@ -20,6 +20,14 @@ main{
                 height: 150px;
                 overflow: hidden; 
                 width : 100%;
+
+                img{
+                    display: block;
+                    height: auto;
+                    margin: 0 auto;
+                    max-width : 150px;
+                    width: 100%; 
+                }
             }
 
             .button-wrap{
@@ -53,14 +61,53 @@ main{
                 font-size: 1em;
             }
 
-            img{
-                height: auto;
-                width : 150px; 
-            }
-
             p{
                 margin: 10px 0;
             }
         }
+    }
+}
+
+#basket{
+    background: $accent;
+    color: white;
+    text-align: right;
+    padding: 10px;
+    margin: 80px 0 0;
+    width: 100%;
+
+    span{
+        padding: 0 1px;
+        &.currency{
+                background-image : url("/img/cart4.svg");
+                background-repeat: no-repeat;
+                padding-left: 30px;
+        }
+        &.total{
+                display: inline-block;
+                line-height: 20px;
+                text-align: left;
+                min-width: 50px;
+        }
+    }
+
+}
+
+#checkout{
+    position: fixed;
+	z-index: 999;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+
+    & > div{
+        background: white;
+        padding: 20px;
+        max-width: 80%;
+        max-height: 80%;
+        margin: 2% auto;
     }
 }
