--- a/scss/partials/_header-footer.scss
+++ b/scss/partials/_header-footer.scss
@@ -1,12 +1,11 @@
-header, footer{
-    @include col(1,1);
-
+body > header, body > footer{
     background: white;
     border-top: 1px solid $accent;
     border-bottom: 1px solid $accent;
     height: 80px;
     position : fixed;
     text-align: center;
+    width: 100%;
 
     h1{
         font-size: 1.2em;
