--- a/scss/partials/_content.scss
+++ b/scss/partials/_content.scss
@@ -4,7 +4,7 @@ html, body{
 
 main{
     padding: 20px;
-    margin: 10px auto;
+    margin: 100px auto 80px;
 }
 
 #shopping-list{
@@ -73,13 +73,14 @@ main{
     color: white;
     text-align: right;
     padding: 10px;
-    margin: 80px 0 0;
+    position: fixed;
+    top: 60px;
     width: 100%;
 
     span{
         padding: 0 1px;
         &.currency{
-                background-image : url("/img/cart4.svg");
+                background-image : url("../img/cart4.svg");
                 background-repeat: no-repeat;
                 padding-left: 30px;
         }
@@ -97,17 +98,96 @@ main{
     position: fixed;
 	z-index: 999;
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	text-align: center;
 	top: 0;
 	left: 0;
 	background: rgba(0,0,0,0.8);
 
+    h1{
+        margin: 5px;
+    }
+
+    button{
+        border-radius: 50%;
+        height: 30px;
+        right: -15px;
+        position: absolute;
+        top: -15px;
+        width: 30px;
+    }
+
     & > div{
         background: white;
-        padding: 20px;
-        max-width: 80%;
-        max-height: 80%;
-        margin: 2% auto;
+        display: table;
+        height: 90%;
+        padding: 10px 20px;
+        position: relative;
+        margin: 30px auto;
+        max-width: 400px;
+        width: 80%;
+
+        .item, .purchases{
+            border-bottom: 1px solid $accent;
+            display: table-cell;
+            padding-bottom: 10px;
+            vertical-align: middle;
+        }
+
+        .total, .total-string{
+            border-top: 3px double $accent;
+            display: table-cell;
+            padding: 10px;
+            text-align: center;
+        }
+
+        .total{
+            width: 40%;
+        }
+
+        ul{
+            list-style: none;
+            width: 100%;
+
+            li{
+                display: table-row;
+                width: 100%;
+
+                &.no-items{
+                    display: block;
+                    margin-bottom: 20px;
+
+                    + li{
+                        display: block;
+
+                        div{
+                            display: block;
+                            float: left;
+                            width: 50%;
+                        }
+                    }
+                }
+
+                h1{
+                    font-size: 14px;
+                }
+                
+                img{
+                    height: auto;
+                    width: 20%;
+                }
+            }
+        }
+    }
+}
+
+#country-selector{
+    clear: both;
+    label{
+        padding: 0 10px;
+    }
+    select{
+        padding: 10px;
+        margin: 10px auto;
     }
 }
